added EDA class

--- a/eda-functions.ipynb
+++ b/eda-functions.ipynb
@@ -169,14 +169,14 @@
     "  import matplotlib.pyplot as plt\n",
     "  text = numericToNumericStats(df, feature, label)[0]\n",
     "  plot = sns.jointplot(x=df[feature], y=df[label], kind='reg')\n",
-    "  plot.fig.text(1,0.8,text,fontsize=12,transform=plt.gcf().transFigure)\n",
+    "  plot.figure.text(1,0.8,text,fontsize=12,transform=plt.gcf().transFigure)\n",
     "  plt.show()\n",
     "  return plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
     "        new_df.loc[col] = ['r', sign, round(abs(r),2), round(p,2)]\n",
     "        stat = 'r'\n",
     "        plot = createScatterPlot(df, col, label)\n",
-    "        plot.fig.suptitle(col)\n",
+    "        plot.figure.suptitle(col)\n",
     "      else:\n",
     "        plot, groups, val, p = createBarChart(df, col, label)\n",
     "        plot.set_title(col)\n",
